# CSCI420_ComputerGraphics

./: README.md
BasicGLUTExample/BasicGLUTExample_nealen/: main.cc
BasicGLUTExample/__MACOSX/: ._BasicGLUTExample_nealen
BasicGLUTExample/__MACOSX/BasicGLUTExample_nealen/: ._README.TXT  ._main.cc
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/: readme.txt
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/assign1/: CMakeLists.txt  assign1.sln
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/assign1/assign1/: CMakeLists.txt  assign1.cpp
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/assign1/assign1/Debug/: assign1.pch
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/assign1/assign1/Debug/assign1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  assign1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/assign1/assign1/x64/Debug/: assign1.pch
Fall22_assignment1/Fall22_assignment1/assign1_starterCode_windowsVS2017/assign1/assign1/x64/Debug/assign1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  assign1.lastbuildstate
Fall22_assignment2/assign2/: CMakeLists.txt  README.txt
Fall22_assignment2/assign2/assign2/: CMakeLists.txt  assign2.cpp
Fall22_assignment2/assign2/assign2/Util/: TrackRenderer.cpp  TrackRenderer.h  catmull.cpp  catmull.h  point.cpp  point.h
assign3/: CMakeLists.txt
assign3/assign3/: CMakeLists.txt  ReadMe.txt  assign3.cpp
assign3/rendered results/: ReadMe.txt
colorCube/__MACOSX/: ._colorCube
colorCube/__MACOSX/colorCube/: ._main.cc
colorCube/colorCube/: main.cc
